--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 :root {
-  --primary: rgb(240, 179, 221);
-  --secondary: rgb(198, 27, 104);
-  --tertiary: rgb(2, 16, 32);
-  --bg-color: rgb(1, 7, 29);
+  --primary: #1a2a80;
+  --secondary: #3b38a0;
+  --tertiary: #b2b0e8;
+  --bg-color: #7a85c1;
   --title-font-size: 3rem;
   --text-font-size: 1.5rem;
   font-size: 16px;
