--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 /* Open Sans Font */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
   --primary: #1a2a80;
   --secondary: #3b38a0;
@@ -13,13 +19,18 @@
   user-select: none;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body {
+  line-height: 2rem;
+  overflow: hidden;
 }
 
-body {
-  line-height: 40px;
-  overflow: hidden;
+::-webkit-scrollbar {
+  width: 0.4rem;
+  background-color: var(--bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary);
+  border-radius: 0.3rem;
+  cursor: pointer;
 }
